# agentsec

./: .dockerignore  .env.example  .gitignore  Dockerfile  GITHUB_REPOSITORY.txt  Makefile  README.md  SECURITY.md  agent-security-detailed-implementation-plan.md  pyproject.toml  setup.cfg
.github/: CODEOWNERS
.github/workflows/: ci.yml
configs/: codex-evaluation.json  model-profiles.json  policy.json
deploy/ec2-tokyo/: .env.example  OPERATIONS.md  README.md  cloudformation.json  compose.yaml  foundation.json  runtime-check.sh
docs/: acceptance-criteria.md  architecture.md  data-handling.md  limitations.md  provider-integration.md  release-audit.md  splunk-integration.md  threat-model.md
docs/runbooks/: approval-operations.md  authorization-outage.md  ledger-integrity.md  provider-outage.md
src/agentsec/: cli.py  (+29 more)
tests/: test_abom_graph_checkpoint.py  test_adapters_observation_splunk.py  test_agent_adapters.py  test_deployment.py  test_deployment_foundation.py  test_deployment_report.py  test_deployment_runtime_check.py  test_enforcement_primitives.py  test_evaluation.py  test_failure_behavior.py  test_incidents.py  test_ledger_and_findings.py  test_live_ui_bridge.py  test_pipeline.py  test_privacy.py  test_provider_adapters.py  test_providers.py  test_release_records.py  test_runtime.py  test_schema_contracts.py  test_service.py  test_synthetic_workflow.py
tools/: clean_room_verify.sh  generate_schemas.py  live_ui_bridge.py  release_audit.py  scan_secrets.py  verify_clean_install.py  write_release_reports.py
ui/: README.md  package-lock.json  package.json
(+18 files in other folders)
