[build-system]
requires = ["setuptools>=58"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-security"
version = "0.1.0"
description = "A deterministic, provider-neutral AI-agent security reference monitor and SOC pipeline"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pydantic==2.12.5"]

[project.scripts]
agentsec = "agentsec.cli:main"
agentsec-serve = "agentsec.service:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
