[metadata]
name = agent-security
version = 0.1.0
description = A deterministic, provider-neutral AI-agent security reference monitor and SOC pipeline
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    pydantic>=2.8,<3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    agentsec = agentsec.cli:main
    agentsec-serve = agentsec.service:main
